# genericUtils

./: CMakeLists.txt  README  README.md
Root/: LinkDef.h
cmt/: Makefile.RootCore  requirements  version.cmt
genericUtils/: PlotFunctions.cxx  PlotFunctions.h  TAxisFunctions.cxx  TAxisFunctions.h
macros/: GridLatex.py  compareRootFiles.py  compareVariables.py  cutcomparisons.py  getEOSFiles.py  makePicoXaod.py  myLumiCalc.py  plotcategories.py  plottrees.py  plottrees2d.py  printAll.py  pyroot  runmacro.py
python/: AtlasStyle.py  CouplingsHelpers.py  LoadLibraries.py  PlotFunctions.py  PlotText.py  PlotUtils.py  ProcessManager.py  PyAnalysisPlotting.py  PyBinningUtilities.py  PyBinningUtils.py  PyConfigUtils.py  PyDecodeDetCells.py  PyGenericUtilities.py  PyGenericUtils.py  PyHelpers.py  PyHistogramUtilities.py  PyHistogramUtils.py  PyInputHandler.py  PyMessageHandler.py  PyParallelize.py  SharedTheory.py  ShowerShapeEvolutionPlotter.py  TAxisFunctions.py  UnitTestPlot.py  UnitTestShapeEvolution.py  __init__.py
share/: AtlasStyleColor.C  AtlasStyleColor.h  CondorFileTransferPatch_EventLoop-00-01-19.sh  EventLoopCondorFileTransferPatch.sh  EventLoopCondorFileTransferPatch.sh_Joey  Extras.h  PicoXaodSkimAlgos.h  bash_profile  beamerSetupSmall.tex  emacs  myLumiCalc.py  mysymbol.sty  problemSetSettings.tex  pystartup  qftDefs.tex  rootlogon.C  rootlogon.py  rootrc  rsync_exclude.txt  srmsize.py  susyDefs.tex  thesisDefs.tex  vimrc
util/: UnitTestPlotCpp.C
